Issue #2536048 by roborat: Support Autocomplete Wordwraping

--- a/starterkits/less/less/overrides.less
+++ b/starterkits/less/less/overrides.less
@@ -459,6 +459,9 @@ ul.pagination li > a {
   .input-group-addon {
     background-color: rgb(255, 255, 255);
   }
+  .dropdown a {
+    white-space: normal;
+  }
 }
 
 // AJAX "Progress bar".
